--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-    "name": "javascript-repl",
-    "version": "1.0.0",
-    "main": "index.js",
-    "scripts": {
-      "start": "node src/index.js",
-      "test": "jest",
-      "lint": "node node_modules/eslint/bin/eslint.js ."
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "description": "",
-    "devDependencies": {
-      "@eslint/js": "^9.15.0",
-      "eslint": "^9.15.0",
-      "eslint-plugin-promise": "^7.1.0",
-      "globals": "^15.12.0",
-      "jest": "^29.7.0"
-    },
-    "dependencies": {
-      "axios": "^1.7.7",
-      "eslint-plugin-jest": "^28.9.0"
-    }
+  "name": "javascript-functions-livecode",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node src/index.js",
+    "lint": "node node_modules/eslint/bin/eslint.js ."
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.3.0",
+    "@eslint/js": "^9.22.0",
+    "@stylistic/eslint-plugin": "^4.2.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jest": "^28.9.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint": "^9.22.0",
+    "globals": "^16.0.0"
+  },
+  "dependencies": {
   }
+}
